[package]
name = "pwnrusthellowasm"
version = "0.4.3"
authors = ["Stepan Klos <stepanklos@gmail.com>"]
description = "A pwnrusthellowasm project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/KlosStepan/Rust-to-Wasm-packages"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"