[package]
name = "pwnqrpayment"
version = "0.1.0"
authors = ["Stepan Klos <stepanklos@gmail.com>"]
description = "A pwnrusthellowasm project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/KlosStepan/Rust-to-Wasm-packages"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rocket = "0.4.7"
qrcode = "0.12"
rqrr = "0.3.2"
image = "0.23.14"
base64 = "0.13.0"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]